--- a/src/app/scoreboard/scoreboard.component.scss
+++ b/src/app/scoreboard/scoreboard.component.scss
@@ -714,6 +714,27 @@ $duration: 130s;
   .mat-select-panel {
     max-height: 400px !important;
   }
+  .loading-bar {
+    position: absolute !important;
+    margin-bottom: -40px !important;
+    margin-left: -16px !important;
+    width: calc(100% - 16px) !important;
+    height: 7px !important;
+    .mat-progress-bar-background {
+      fill: rgba(255, 255, 255, 0) !important;
+    }
+    .mat-progress-bar-buffer {
+      background-color: rgba(255, 255, 255, 0) !important;
+    }
+    .mat-progress-bar-fill::after {
+      background-color: #ffffff61 !important;
+    }
+  }
+  .default {
+    .loading-bar{
+      margin-left: -10px !important;
+    }
+  }
 }
 
 @media (max-width: 768px) {
