--- a/src/app/indexer/ops/intel-dialog/intel-dialog.component.html
+++ b/src/app/indexer/ops/intel-dialog/intel-dialog.component.html
@@ -5,14 +5,12 @@
 
 <ng-container *ngIf="type=='player'">
   <div class="intel-wrapper-player">
-    <!--<app-index-player [world]="world" [id]="id" [key]="team" [embedded]="true"></app-index-player>-->
-    <app-index-player [world]="'nl108'" [id]="1074596" [key]="'1z7ay7s5'" [embedded]="true"></app-index-player>
+    <app-index-player [world]="world" [id]="id" [key]="team" [embedded]="true"></app-index-player>
   </div>
 </ng-container>
 
 <ng-container *ngIf="type=='town'">
   <div class="intel-wrapper-town">
-    <!--  <app-index-town [world]="world" [id]="id" [key]="team" [embedded]="true"></app-index-town>-->
-    <app-index-town [world]="'nl108'" [id]="3331" [key]="'1z7ay7s5'" [embedded]="true"></app-index-town>
+    <app-index-town [world]="world" [id]="id" [key]="team" [embedded]="true"></app-index-town>
   </div>
 </ng-container>
