--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -250,10 +250,12 @@
           GrepoData is created for the community, by the community. A special thanks to the following people for their contributions:
         </p>
         <strong>Vít Dolínek (LG)</strong> - For your countless contributions, creating the Discord bot, and pushing the frontend to the next level<br/>
-        <strong>David1327</strong> - For your help and for integrating GrepoData statistics into the DIO tools userscript<br/>
-        <strong>Shuri2060</strong> - For your valuable feedback, ideas and contributions to the discussion<br/>
+        <strong>David1327</strong> - For your help and for integrating GrepoData statistics into the <a href="https://dio-david1327.github.io" target="_blank">DIO-Tools</a> userscript<br/>
+        <strong>Marcel-Z</strong> - For integrating GrepoData statistics into the <a href="https://www.grepotools.nl/en/" target="_blank">GrepoTools</a> userscript<br/>
+        <strong>Shuri2060</strong> - For your feedback, ideas and contributions to the discussion<br/>
+        <strong>Megasmorf</strong> - For your ideas & contributions to the indexer & Discord bot<br/>
         <strong>Gandalf13</strong> - For your help setting up the first GrepoData version in 2016<br/>
-        <strong>megasmorf</strong> - For your contributions to the indexer & Discord bot<br/>
+        And finally, a big thank you to everybody else that contributed with ideas, bug reports or feedback!
       </div>
 
       <br/>
