--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
     </footer>
 </div>
 
-<!--<div class="overlay-msg" [hidden]="hidden_warning" (click)="hidden_warning=true">-->
-<!--  <app-alert [type]="'warning'" [title]="'Scheduled Server Maintenance In Progress'" [dismissible]="true">-->
-<!--    <h4>GrepoData will be offline from <strong>09:00 AM until 11:00 AM</strong> (UTC) on Saturday 27 November 2021 due to a server migration. Please check back later.</h4>-->
-<!--  </app-alert>-->
-<!--</div>-->
+<!-- <div class="overlay-msg" [hidden]="hidden_warning" (click)="hidden_warning=true">
+    <app-alert [type]="'warning'" [title]="'Scheduled Server Maintenance: December 1'" [dismissible]="true">
+        <h4>GrepoData will be offline on <strong>December 1, 2024 from 11:00 UTC until 13:00 UTC</strong> due to a server migration. There will likely be data loss during this period. Please check back later.</h4>
+    </app-alert>
+</div> -->
