--- a/src/app/scoreboard/scoreboard.component.html
+++ b/src/app/scoreboard/scoreboard.component.html
@@ -957,7 +957,7 @@
         <div class="col-xs-12 scoreboard-table" *ngIf="!loadingPlayers && !loadingAlliances && playerData && allianceData && playerData?.att && playerData?.att.length > 20">
           <div class="sb-table">
             <div class="content">
-              <app-alert type="info text-center" [dismissible]="true" [dismissPermanentId]="'daily_donate'">
+              <app-alert type="info text-center" [dismissible]="true" [dismissPermanentId]="'daily_donate24'">
                 <h5><strong>The GrepoData hosting costs are currently €70/month.</strong> If you like what we do, please consider <a class="a-link-dialog" (click)="donate()">donating</a>. Thank you! 🤗</h5>
               </app-alert>
             </div>
