--- a/src/app/auth/profile/profile.component.html
+++ b/src/app/auth/profile/profile.component.html
@@ -37,9 +37,9 @@
 <!--        </p>-->
 <!--      </app-alert>-->
 
-<!--      <app-alert type="warning" [dismissible]="true">-->
-<!--        <span class="gd-secondary">GrepoData will be offline for maintenance on <strong>November 24, 2023 from 19:00 UTC until 21:00 UTC.</strong><br/></span>-->
-<!--      </app-alert>-->
+      <!-- <app-alert type="warning" [dismissible]="true">
+        <span class="gd-secondary">GrepoData will be offline for maintenance on <strong>December 1, 2024 from 11:00 UTC until 13:00 UTC.</strong><br/></span>
+      </app-alert> -->
 
       <mat-card *ngIf="account_confirmed && ['intel', 'player', 'alliance', 'town', 'team'].indexOf(active_tab)>=0" class="search-card">
         <app-index-search></app-index-search>
