Enable to remove conquered ghost town from BB code

--- a/src/app/player/ghost-towns/ghost-towns.component.html
+++ b/src/app/player/ghost-towns/ghost-towns.component.html
@@ -83,6 +83,10 @@
                   <mat-option value="points">Points</mat-option>
                 </mat-select>
               </mat-form-field>
+
+              <mat-slide-toggle formControlName="keepConqueredTowns" class="m-l-40">
+                Keep already conquered towns
+              </mat-slide-toggle>
             </div>
           </mat-expansion-panel>
         </mat-accordion>
