Add master world flag

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1361,6 +1361,9 @@ mat-paginator {
 .flag-zz {
   background: url('assets/images/flags.png') -64px -128px;
 }
+.flag-ts {
+  background: url('assets/images/flags.png') -96px -128px;
+}
 
 .gd-share-link-container {
   label {
